# visual_intro_to_QC

./: 0_overview_of_the_course.ipynb  10_Phase_Kickback.ipynb  11_Deutsch_Josza_algorithm.ipynb  12_Grovers_algorithm.ipynb  13_Shors_algorithm.ipynb  1_Introduction_to_qubits.ipynb  2_single_qubit_operations.ipynb  3_BB84_protocol.ipynb  4_introduction_to_entanglement.ipynb  5_Superdense_Coding.ipynb  6_The_Bell_experiment.ipynb  7_Ekert_91_protocol.ipynb  8_Quantum_Teleportation.ipynb  9_communication_to_computation.ipynb  Dockerfile  README.md  interactive_visualization.ipynb  interactive_visualization_app.ipynb  library.json  pyproject.toml  readme.md  requirements.txt  test.ipynb  test.py
images/: B84.pptx
qc_education_package/: __init__.py  dim_Bloch_spheres.py  interactive_visualization.py  simulator.py  visualization.py
src/qc_interactive_education_package/: __init__.py  app.ipynb  challenge.ipynb  dim_Bloch_spheres.py  index.ipynb  interactive_visualization.py  launch_viewer.py  library.json  library_adder.ipynb  quantum_library.py  simulator.py  visualization.py
