[project]
name = "qc_interactive_education_package"
keywords = ["quantum computing", "circle notation", "education"]
dependencies = [
  "matplotlib >= 3.7.0",
  "numpy >= 1.22.4",
  "qiskit >= 1.0.0",
  "ipywidgets >= 8.0.0",
  "voila >= 0.5.0",
  "hsluv>=5.0.4",
  "jupyter==1.1.1",
  "ipykernel==7.2.0",
  "pylatexenc>=2.10",
  "Pillow >= 9.0.0"
]
version = "0.2.0"
authors = [
  { name="Nikolas Longen", email="nlongen@rptu.de" },
  {name = "Patrick Pfau", email = "ppfau@rptu.de"},
  {name = "Jonas Bley", email = "jonas.bley@gmx.de"},
  { name="Maximilian Kiefer-Emmanouilidis", email="maximilian.kiefer@rptu.de" }
]
description = "Quantuk QC-interactive-Education-Package"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" =  "https://www.physik.uni-kl.de/widera/forschung/quantuk"
"Repository" = "https://github.com/QuanTUK/QC-interactive-Education-Package"
"Bug Tracker" = "https://github.com/QuanTUK/QC-interactive-Education-Package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qc_interactive_education_package"]

[tool.hatch.build.targets.wheel.force-include]
"src/qc_interactive_education_package/app.ipynb" = "qc_interactive_education_package/app.ipynb"
"src/qc_interactive_education_package/challenge.ipynb" = "qc_interactive_education_package/challenge.ipynb"
